ChangeLog for herdstat

2005-06-16 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_find.cc: Fixed missing is_pkg_dir check in
	find_package_in() that caused the overlay display to be printed if the
	package directory exists in an overlay but no ebuild is present.

2005-06-15 Aaron Walker <ka0ttic@gentoo.org>

	* src/metacache.cc: Updated valid() to check first line of metacache.
	If it does not equal "version=VERSION" then it'll be considered
	invalid, and of course updated dump() to write it.  This will prevent
	weird bugs caused by any future format changes.
	* src/querycachectl.cc: Updated summary action to display what the
	newest and oldest query/with strings are.

2005-06-14 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc9).
	* lib/vars.cc: ensure that a previously existing element in the vars
	map is erased before trying to insert it (otherwise insert() fails).
	* bashcomp: Updated to only define _complete_herd and _complete_dev if
	not previously defined, as the upcoming gentoo-bashcomp will define
	them.

2005-06-11 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc8).
	* src/file.hh: Added exists() member func.  Modified operator() to
	return a bool (exists).
	* src/metacache.cc, src/pkgcache.cc, src/herds_xml.cc,
	src/herds_xml_handler.cc, src/devaway.cc: Updated to use stat_T over
	struct stat.
	* src/action_which_handler.cc: Fixed bug in --which --regex that
	caused certain matches (those that also exist in an overlay) to not be
	displayed.

2005-06-10 Aaron Walker <ka0ttic@gentoo.org>

	* lib/file.cc, lib/file.hh:  Rewrote file classes from scratch.  Added
	a stat_T class which acts as a stat wrapper.  The rewrite fixes a few
	design flaws/bugs with the previous implementation.  Also use
	std::equal in file_T::operator== instead of std::mismatch.
	* lib/vars.hh: Updated vars_T with new file_base_T interface.
	* lib/portage_find.cc: Fixed significant bug in