@@ -2,11 +2,11 @@
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1118474699">
-        Convert portage_find stuff to classes.
-    </note>
     <note priority="veryhigh" time="1118568868">
         Add a --with-desc flag for searching packages for desc/longdesc matching specified regex.
+    </note>
+    <note priority="veryhigh" time="1119017280">
+        QUERYCACHE SHOULD CACHE PORTDIR TO COMPARE AGAINST CURRENT PORTDIR AND SHOULD CONSIDER NON-MATCHING TO BE INVALID.
     </note>
     <note priority="high" time="1118474681">
         Add a --pattern flag for searching via pattern matching?
